--- a/templates/login.html
+++ b/templates/login.html
@@ -63,7 +63,7 @@ background-size: 100px 100px;
     <br/>
 
     <div id="logo" class="logo"></div>
-    <span style="text-align: center;"><h3><strong>高校之恋</strong></h3></span>
+    <span style="text-align: center;"><h3><strong>鹅厂脱单</strong></h3></span>
     <br/>
 
     <form action="" method="post" name="login" class="form-signin" role="form">
